fixed blur going out of the screen, added close button to modal

--- a/my-portfolio/src/stylesheet/Image.css
+++ b/my-portfolio/src/stylesheet/Image.css
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 40%;
+    max-width: 60%;
     max-height: 90%;
     padding: 10px;
     border-radius: 8px;
@@ -29,8 +29,8 @@
 
 .modal-content img {
     max-width: 100%;
-    max-height: 80vh; /* Limit the height to avoid overlapping the caption */
-    object-fit: contain; /* Ensures the image fits within the modal without being distorted */
+    max-height: 80vh;
+    object-fit: contain; 
 }
 
 .title {
@@ -41,4 +41,20 @@
     text-align: center;
     word-wrap: break-word;
     max-width: 100%;
+}
+
+/* for close button */
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    color: white;
+    font-size: 1.5em;
+    background: none;
+    border: none;
+}
+
+.close:hover {
+    color: rgb(164, 164, 164); /* Adjust hover color as needed */
 }
