--- a/my-portfolio/src/stylesheet/Projects.css
+++ b/my-portfolio/src/stylesheet/Projects.css
@@ -14,6 +14,11 @@
         /* margin-right: 1em; */
         margin-bottom: 3em;
     }
+
+    .dot1, .dot2, .dot3, .dot4, .dot5 {
+        filter: none !important;
+        display: none;
+    }
 }
 
 .sunney-images {
